# intracranial_ephys_utils

./: .gitignore  404.html  LICENSE.txt  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy_docs.yml
docs/: index.md  reference.md
docs/documentation/: load_data.md  manual_process.md  plot_data.md  preprocess.md
documentation/load_data/: index.html
documentation/manual_process/: index.html
documentation/plot_data/: index.html
documentation/preprocess/: index.html
intracranial_ephys_utils/: load_data.py  manual_process.py  plot_data.py  preprocess.py
search/: search_index.json
