[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intracranial_ephys_utils"
version = "0.0.2"
description = "This is a simple package of functions that could be used in the situation where you have neuralynx data"
readme = "README.md"
# what style of license
license = "MIT"
# create and ship the license file
license-files = ["LICENSE.txt"]
authors = [
    {name = "Eduardo Sandoval", email = "esandoval@berkeley.edu"},
]
# who is maintaining it now? and how do we contact them?
maintainers = [
    {name = "Eduardo Sandoval", email = "esandoval@berkeley.edu"},
]
requires-python = ">=3.11.3"
dynamic = ["dependencies"]

[project.optional-dependencies]
docs = [
    "mkdocs-material", "mkdocstrings-python",
]
tests = ["pytest"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["intracranial_ephys_utils"]